--- a/index.html
+++ b/index.html
@@ -2,26 +2,52 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Fork Me! FCC: Test Suite Template</title>
+    <title>Handcrafted, home-made masterpieces</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+  <header id="header">
+     
+    <nav id="nav-bar">
+    <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" 
+     alt="logo">
+     <a href="#Features" class="nav-link">Features</a>
+     <a href="#" class="nav-link">How It Works</a>
+     <a href="#footer" class="nav-link">Pricing</a>
+    </nav> 
+      </header>
+   
+   <h2>Handcrafted, home-made masterpieces</h2>
 
-    <p style="position: relative; top: 20px; ">Hello World, we are software developers!</p>
-    <!--
+   <form id="form" action="https://www.freecodecamp.com/email-submit">
+    <label for="email"></label><br>
+    <input type="email" id="email" name="email" placeholder="Enter your email address">
+    <br><br>
+    <input id="submit" type="submit" value="Get Started">
+  </form>
+  
+  <div id="Features">
+  <h4>Premium Materials</h4>
+  <p>Our trombones use the shiniest brass which is sourced locally. This will increase
+    the longevity of your purchase.</p>
+  
+  <h4>Fast Shipping</h4>
+  <p>We make sure you recieve your trombone as soon as we have finished making it. We 
+    also provide free returns if you are not satisfied.</p> 
 
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
+  <h4>Quality Assurance</h4>
+  <p>For every purchase you make, we will ensure there are no damages or faults and we 
+    will check and test the pitch of your instrument.</p>
+  </div>
+  
+  <iframe id="video" src="https://youtu.be/y8Yv4pnO7qc"></iframe>
+  
+  
+   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> 
     <script  src="js/index.js"></script>
   </body>
+
+
+  <footer id="footer"></footer>
 </html>
