--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <title>Handcrafted, home-made masterpieces</title>
     <link rel="stylesheet" href="css/style.css">
+
+  <style>
+    body{
+    background-color: beige;
+}
+@media (max-width: 600px) {
+    body {
+      background-color: rgb(198, 198, 198);
+    }
+  } 
+  </style>
   </head>
 
   <body>
@@ -13,7 +24,7 @@
     <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" 
      alt="logo">
      <a href="#Features" class="nav-link">Features</a>
-     <a href="#" class="nav-link">How It Works</a>
+     <a href="#video" class="nav-link">How It Works</a>
      <a href="#footer" class="nav-link">Pricing</a>
     </nav> 
       </header>
@@ -49,5 +60,9 @@
   </body>
 
 
-  <footer id="footer"></footer>
+  <footer id="footer">
+    <a href="#header" class="foot-link">Privacy</a>
+    <a href="#header" class="foot-link">Terms</a>
+    <a href="#header" class="foot-link">Contact</a>
+  </footer>
 </html>
