Before Meeting Edition

--- a/index.html
+++ b/index.html
@@ -43,6 +43,39 @@
   
   <iframe id="video" src="https://youtu.be/y8Yv4pnO7qc"></iframe>
   
+
+  <div id="box-container">
+    <div id="box-1">
+     <h5>TENOR TROMBONE</h5>
+     <P>$600</P>
+     <P>Lorem ipsum.</P>
+     <p>Lorem ipsum.</p>
+     <p>Lorem ipsum dolor.</p>
+     <p>Lorem ipsum.</p> 
+     <button>Select</button>
+  
+    </div>
+    <div id="box-2">
+     <h5>BASS TROMBONE</h5>
+     <P>$900</P> 
+     <P>Lorem ipsum.</P>
+     <p>Lorem ipsum.</p>
+     <p>Lorem ipsum dolor.</p>
+     <p>Lorem ipsum.</p>
+     <button>Select</button>   
+    </div>
+    <div id="box-3">
+      <h5>VALVE TROMBONE</h5>
+     <P>$1200</P> 
+     <P>Plays similar to a Trumpet</P>
+     <p>Great for Jazz Banks</p>
+     <p>Lorem ipsum dolor.</p>
+     <p>Lorem ipsum.</p> 
+     <button>Select</button>
+    </div>
+  </div>
+
+
   
    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> 
     <script  src="js/index.js"></script>
@@ -53,5 +86,6 @@
     <a href="#header" class="foot-link">Privacy</a>
     <a href="#header" class="foot-link">Terms</a>
     <a href="#header" class="foot-link">Contact</a>
+    <P>Copyright 2016, Original Trombones</P>
   </footer>
 </html>
