--- a/index.html
+++ b/index.html
@@ -2,90 +2,143 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Handcrafted, home-made masterpieces</title>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    />
     <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body>
-  <header id="header">
-     
-    <nav id="nav-bar">
-    <img id="header-img" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png" 
-     alt="logo">
-     <a href="#Features" class="nav-link">Features</a>
-     <a href="#video" class="nav-link">How It Works</a>
-     <a href="#footer" class="nav-link">Pricing</a>
-    </nav> 
+    <div id="page-wrapper">
+      <header id="header">
+        <div class="logo">
+          <img
+            id="header-img"
+            src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
+            alt="original trombones logo"
+          />
+        </div>
+
+        <nav id="nav-bar">
+          <ul>
+            <li><a class="nav-link" href="#features">Features</a></li>
+            <li><a class="nav-link" href="#youtube-video">How It Works</a></li>
+            <li><a class="nav-link" href="#price">Pricing</a></li>
+          </ul>
+        </nav>
       </header>
-   
-   <h2>Handcrafted, home-made masterpieces</h2>
 
-   <form id="form" action="https://www.freecodecamp.com/email-submit">
-    <label for="email"></label><br>
-    <input type="email" id="email" name="email" placeholder="Enter your email address">
-    <br><br>
-    <input id="submit" type="submit" value="Get Started">
-  </form>
-  
-  <div id="Features">
-  <h4>Premium Materials</h4>
-  <p>Our trombones use the shiniest brass which is sourced locally. This will increase
-    the longevity of your purchase.</p>
-  
-  <h4>Fast Shipping</h4>
-  <p>We make sure you recieve your trombone as soon as we have finished making it. We 
-    also provide free returns if you are not satisfied.</p> 
+      <div class="container"></div>
 
-  <h4>Quality Assurance</h4>
-  <p>For every purchase you make, we will ensure there are no damages or faults and we 
-    will check and test the pitch of your instrument.</p>
-  </div>
-  
-  <iframe id="video" src="https://youtu.be/y8Yv4pnO7qc"></iframe>
-  
+      <section id="form-section">
+        <h2>Handcrafted, home-made masterpieces</h2>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+          <input
+            name="email"
+            id="email"
+            type="email"
+            placeholder="Enter your email address"
+            required
+          />
+          <input id="submit" type="submit" value="Get Started" class="btn" />
+        </form>
+      </section>
 
-  <div id="box-container">
-    <div id="box-1">
-     <h5>TENOR TROMBONE</h5>
-     <P>$600</P>
-     <P>Lorem ipsum.</P>
-     <p>Lorem ipsum.</p>
-     <p>Lorem ipsum dolor.</p>
-     <p>Lorem ipsum.</p> 
-     <button>Select</button>
-  
+      <div class="container">
+        <section id="features">
+          <div class="grid">
+            <div class="icon"><i class="fa fa-3x fa-fire"></i></div>
+            <div class="desc">
+              <h2>Premium Materials</h2>
+              <p>
+                Our trombones use the shiniest brass which is sourced locally.
+                This will increase the longevity of your purchase.
+              </p>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="icon"><i class="fa fa-3x fa-truck"></i></div>
+            <div class="desc">
+              <h2>Fast Shipping</h2>
+              <p>
+                We make sure you recieve your trombone as soon as we have
+                finished making it. We also provide free returns if you are not
+                satisfied.
+              </p>
+            </div>
+          </div>
+          <div class="grid">
+            <div class="icon">
+              <i class="fa fa-3x fa-battery-full" aria-hidden="true"></i>
+            </div>
+            <div class="desc">
+              <h2>Quality Assurance</h2>
+              <p>
+                For every purchase you make, we will ensure there are no damages
+                or faults and we will check and test the pitch of your
+                instrument.
+              </p>
+            </div>
+          </div>
+        </section>
+        <section id="youtube-video">
+          <iframe
+            id="video"
+            height="315"
+            src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0"
+            frameborder="0"
+            allowfullscreen
+          ></iframe>
+        </section>
+        <section id="price">
+          <div class="product" id="tenor">
+            <div class="level">Tenor Trombone</div>
+            <h2>$600</h2>
+            <ol>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum dolor.</li>
+              <li>Lorem ipsum.</li>
+            </ol>
+            <button class="btn">Select</button>
+          </div>
+          <div class="product" id="bass">
+            <div class="level">Bass Trombone</div>
+            <h2>$900</h2>
+            <ol>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum.</li>
+              <li>Lorem ipsum dolor.</li>
+              <li>Lorem ipsum.</li>
+            </ol>
+            <button class="btn">Select</button>
+          </div>
+          <div class="product" id="valve">
+            <div class="level">Valve Trombone</div>
+            <h2>$1200</h2>
+            <ol>
+              <li>Plays similar to a Trumpet</li>
+              <li>Great for Jazz Bands</li>
+              <li>Lorem ipsum dolor.</li>
+              <li>Lorem ipsum.</li>
+            </ol>
+            <button class="btn">Select</button>
+          </div>
+        </section>
+        <footer>
+          <ul>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+          <span>Copyright 2016, Original Trombones</span>
+        </footer>
+      </div>
     </div>
-    <div id="box-2">
-     <h5>BASS TROMBONE</h5>
-     <P>$900</P> 
-     <P>Lorem ipsum.</P>
-     <p>Lorem ipsum.</p>
-     <p>Lorem ipsum dolor.</p>
-     <p>Lorem ipsum.</p>
-     <button>Select</button>   
-    </div>
-    <div id="box-3">
-      <h5>VALVE TROMBONE</h5>
-     <P>$1200</P> 
-     <P>Plays similar to a Trumpet</P>
-     <p>Great for Jazz Banks</p>
-     <p>Lorem ipsum dolor.</p>
-     <p>Lorem ipsum.</p> 
-     <button>Select</button>
-    </div>
-  </div>
-
-
-  
    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> 
     <script  src="js/index.js"></script>
   </body>
-
-
-  <footer id="footer">
-    <a href="#header" class="foot-link">Privacy</a>
-    <a href="#header" class="foot-link">Terms</a>
-    <a href="#header" class="foot-link">Contact</a>
-    <P>Copyright 2016, Original Trombones</P>
-  </footer>
 </html>
